k8s/base/namespaces.yaml
apiVersion:  v1
kind:  Namespace
metadata:
    name:  ai-platform
---
apiVersion:  v1
kind:  Namespace
metadata:
    name:  istio-system
